--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,4 +1,11 @@
-FROM node:20-alpine
+# Use official Node image with Python pre-installed
+FROM python:3.11-slim
+
+# Install Node.js 20
+RUN apt-get update && apt-get install -y curl && \
+    curl -fsSL https://deb.nodesource.com/setup_20.x | bash - && \
+    apt-get install -y nodejs && \
+    apt-get clean && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
 
@@ -9,7 +16,7 @@ RUN npm ci --only=production
 # Copy source code
 COPY . .
 
-# Create directory for GCP key (Render will mount it)
+# Create keys directory for GCP
 RUN mkdir -p /app/keys
 
 EXPOSE 5050
