--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,21 +1,26 @@
-FROM node:20-alpine
+# Use Python slim as base (has Python + pip)
+FROM python:3.11-slim
+
+# Install Node.js 20
+RUN apt-get update && \
+    apt-get install -y curl && \
+    curl -fsSL https://deb.nodesource.com/setup_20.x | bash - && \
+    apt-get install -y nodejs && \
+    apt-get clean && rm -rf /var/lib/apt/lists/*
+
+# Install pdfplumber using pip (with flag to bypass PEP 668)
+RUN pip install pdfplumber moviepy os-sys --break-system-packages
 
 WORKDIR /app
 
-# Install Python and pip
-RUN apk add --no-cache python3 py3-pip
-
-# Install pdfplumber (for PDF text extraction)
-RUN pip3 install pdfplumber moviepy os-sys
-
-# Copy package files
+# Copy and install Node dependencies
 COPY package*.json ./
 RUN npm ci --only=production
 
 # Copy source code
 COPY . .
 
-# Create keys directory
+# Create directory for GCP key (Render secret file)
 RUN mkdir -p /app/keys
 
 EXPOSE 5050
