--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,4 +1,3 @@
-# Use Python slim as base (has Python + pip)
 FROM python:3.11-slim
 
 # Install Node.js 20
@@ -8,8 +7,8 @@ RUN apt-get update && \
     apt-get install -y nodejs && \
     apt-get clean && rm -rf /var/lib/apt/lists/*
 
-# Install pdfplumber using pip (with flag to bypass PEP 668)
-RUN pip install pdfplumber moviepy os-sys --break-system-packages
+# Install ONLY pdfplumber (required for PDF text extraction)
+RUN pip install pdfplumber --break-system-packages
 
 WORKDIR /app
 
@@ -20,7 +19,7 @@ RUN npm ci --only=production
 # Copy source code
 COPY . .
 
-# Create directory for GCP key (Render secret file)
+# Create directory for GCP key
 RUN mkdir -p /app/keys
 
 EXPOSE 5050
